# remembr

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  Procfile  QUICKSTART.md  RAILWAY_QUICKSTART.md  README.md  TESTING.md  docker-compose.test.yml  docker-compose.yml  railway.toml  test_api.py  verify_local.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml
adapters/: README.md  __init__.py
adapters/autogen/: __init__.py  pyproject.toml  remembr_autogen_memory.py
adapters/autogen/examples/: coding_agents.py
adapters/autogen/tests/: test_remembr_autogen_memory.py
adapters/base/: __init__.py  error_handling.py  remembr_adapter_base.py  utils.py
adapters/base/tests/: test_utils_and_error_handling.py
adapters/crewai/: __init__.py  pyproject.toml  remembr_crew_memory.py
adapters/crewai/examples/: research_crew.py
adapters/crewai/tests/: test_remembr_crew_memory.py
adapters/haystack/: __init__.py  pyproject.toml  remembr_haystack_memory.py
adapters/haystack/examples/: rag_pipeline.py
adapters/haystack/tests/: test_remembr_haystack_memory.py
adapters/langchain/: __init__.py  pyproject.toml  remembr_memory.py
adapters/langchain/examples/: basic_agent.py
adapters/langchain/tests/: test_remembr_memory.py
adapters/langgraph/: __init__.py  pyproject.toml  remembr_langgraph_memory.py
adapters/langgraph/examples/: research_agent.py
adapters/langgraph/tests/: test_remembr_langgraph_memory.py
adapters/llamaindex/: __init__.py  pyproject.toml  remembr_llamaindex_memory.py
adapters/llamaindex/examples/: chat_engine.py
adapters/llamaindex/tests/: test_remembr_llamaindex_memory.py
adapters/openai_agents/: __init__.py  pyproject.toml  remembr_openai_memory.py
adapters/openai_agents/examples/: customer_support.py
adapters/openai_agents/tests/: test_remembr_openai_memory.py
adapters/pydantic_ai/: __init__.py  pyproject.toml  remembr_pydantic_memory.py
adapters/pydantic_ai/examples/: assistant.py
adapters/pydantic_ai/tests/: test_remembr_pydantic_memory.py
docs/: api-reference.md  concepts.md  quickstart.md  security.md  self-hosted.md
docs/adapters/: autogen.md  crewai.md  haystack.md  langchain.md  langgraph.md  llamaindex.md  openai_agents.md  pydantic_ai.md
sdk/python/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
sdk/python/examples/: async_memory_workflow.py  checkpoint_and_forget.py  sync_wrapper_usage.py
sdk/python/remembr/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: conftest.py  test_auth.py  test_checkpoints.py  test_integration_live.py  test_memory.py  test_retry.py  test_sessions.py
sdk/typescript/: .npmignore  jest.config.js  package-lock.json  package.json
sdk/typescript/examples/: browser.ts  node.ts
sdk/typescript/src/: client.ts  errors.ts  http.ts  index.ts  types.ts
sdk/typescript/tests/: README.md  client.test.ts  http.test.ts
sdk/typescript/tests/helpers/: mock-fetch.ts
server/: .coveragerc  API_KEYS.md  AUTH.md  AUTH_COMPLETE.md  CONTEXT_MIDDLEWARE.md  DATABASE.md  Dockerfile  EMBEDDINGS.md  FEATURES.md  MIGRATIONS.md  PERFORMANCE.md  QUICKSTART.md  README.md  REDIS.md  RLS.md  pyproject.toml  pytest.ini  pytest_asyncio.py  requirements.txt  run.py
server/alembic/: env.py
server/alembic/versions/: 20260223_1800_001_initial_schema.py  20260223_1900_002_add_embeddings_table.py  20260223_2000_003_add_rls_policies.py  20260224_0100_004_add_audit_log_table.py
server/app/: config.py  config_example.py  error_codes.py  exceptions.py  main.py  test_main.py
server/app/api/: responses.py
server/app/api/v1/: api_keys.py  auth.py  memory.py  router.py
server/app/db/: base.py  redis.py  rls.py  session.py  utils.py
server/app/examples/: auth_example.py  cache_usage.py  context_usage.py
server/app/middleware/: __init__.py  context.py  rate_limit.py
server/app/models/: __init__.py  agent.py  api_key.py  audit_log.py  embedding.py  episode.py  memory_fact.py  organization.py  session.py  team.py  user.py
server/app/repositories/: __init__.py  embedding_repo.py  embedding_repository.py  episode_repo.py  session_repo.py
server/app/services/: __init__.py  api_keys.py  auth.py  cache.py  embedding.py  embedding_service.py  episodic.py  forgetting.py  memory_query.py  scoping.py  short_term.py
server/scripts/: init_db.py
server/tests/: conftest.py  test_api_keys.py  test_auth.py  test_cache.py  test_config.py  test_context.py  test_context_integration.py  test_episode_repo.py  test_episodic.py  test_error_handling.py  test_forgetting_service.py  test_health.py  test_memory_api.py  test_memory_query.py  test_middleware.py  test_rate_limit_config.py  test_rls.py  test_scoping.py  test_scoping_unit.py  test_security_authz.py  test_short_term.py
tests/: test_8_adapters_final.py  test_all_8_adapters_e2e.py  test_sdk.py  test_sdk.ts
tests/e2e/: conftest.py  pytest.ini  test_adapters_e2e.py  test_memory_lifecycle.py  test_multi_tenant.py
tests/performance/: locustfile.py
