[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remembr-server"
version = "0.1.0"
description = "Remembr memory service API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N818"]  # Allow exception names without Error suffix

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models use string type hints for relationships to avoid circular imports
# F821: Undefined names in forward references (intentional for SQLAlchemy)
# UP037: Keep quotes in type annotations (required for SQLAlchemy relationships)
# E402: Module level imports after `from __future__ import annotations` (acceptable pattern)
"app/models/*.py" = ["F821", "UP037", "E402"]
"app/repositories/embedding_repo.py" = ["F401"]  # Episode import used for type checking
# Alembic migrations are auto-generated and may have long lines
"alembic/versions/*.py" = ["E501"]
# Test files may have long lines for readability
"tests/*.py" = ["E501"]
