[project]
name = "remembr-langgraph-adapter"
version = "0.1.0"
description = "LangGraph adapter for Remembr persistent memory and checkpoints"
requires-python = ">=3.10"
dependencies = [
  "remembr>=0.1.0",
  "langgraph>=0.1.0",
  "langchain-core>=0.1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
