[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remembr"
version = "0.1.0"
description = "Persistent memory infrastructure for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Emmanuel Nwanguma", email = "nwangumaemmanuel29@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["ai", "memory", "agents", "llm", "langchain", "embeddings", "vector-search"]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
]

[project.urls]
Homepage = "https://github.com/emartai/remembr"
Repository = "https://github.com/emartai/remembr"
Documentation = "https://github.com/emartai/remembr#readme"
"Bug Tracker" = "https://github.com/emartai/remembr/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.setuptools.packages.find]
include = ["remembr*"]
